# UU_Raytracer

./: .gitignore  FrockGameEngine.sln  README.md  README.txt
DemoGame/: DemoFXAA.cs  DemoGame.cs  DemoGame.csproj  DemoRaytrace.cs
DemoRaytraceGame/: DemoRaytraceGame.cs  DemoRaytraceGame.csproj
Engine/: Camera.cs  Engine.csproj  Game.cs  Game2D.cs  Game3D.cs  GameWindow.cs  Renderer.cs  Scene.cs
Engine/Graphics/: Mesh.cs  (+3 more)
Fastest Raytracer/: CMakeLists.txt  Readme.txt
Fastest Raytracer/raytrace/: CMakeLists.txt  camera.h  debug_draw.h  defines.h  macros.h  objects.cpp  objects.h  primitives.h  quick_maths.h  raster.h  ray.h  raytrace_program.cpp  raytrace_program.h  raytracer.cpp  raytracer.h  world.h
Fastest Raytracer/raytrace/utils/: file_utils.h
FrockRaytracer/: Constants.cs  DebugRenderer.cs  FrockRaytracer.csproj  MultiResolutionRaster.cs  Raster.cs  RaytraceMotherBee.cs  RaytraceWorker.cs  Raytracer.cs  Settings.cs  Window.cs  World.cs  packages.config
FrockRaytracerDemo/: FrockRaytracerDemo.csproj  MeshesScene.cs  MirrorRoomScene.cs  Program.cs  RaytracerDemo.cs  SpheresScene.cs  StanfordScene.cs  TestScene.cs
Graphics/: Camera.cs  Help.cs  Mesh.cs  Object.cs  Perlin.cs  Scene.cs  Shader.cs  SphereMesh.cs  TerrainGenerated.cs  TerrainHeightMap.cs  TerrainImage.cs  TerrainMesh.cs  TerrainObject.cs  VolumetricObject.cs  game.cs  packages.config  surface.cs  template.cs  template.csproj
RaytraceEngine/: Constants.cs  DebugRenderer.cs  RMath.cs  Ray.cs  RayCamera.cs  RayScene.cs  RaytraceEngine.csproj  RaytraceGame.cs  Raytracer.cs  TraceSettings.cs
(+98 files in other folders)
